# gene_ranker

./: CONTRIBUTING.md  README.md  pyproject.toml
gene_ranker/: __init__.py  bin.py  dual_dataset.py  ranker.py  ranking_methods.py
gene_ranker/methods/: __init__.py  base.py  bws.py  cohen.py  deseq_shrinkage.py  fold_change.py  signal_to_noise.py
test_data/: test_case_matrix.csv  test_control_matrix.csv
tests/: test_dual_dataset.py  test_integration.py  test_ranker.py
