[project]
name = "gene-ranker"
authors = [{name="Visentin Luca", email="luca.visentin@unito.it"}]
description = "A small program to calculate gene rankings given various metrics"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/MrHedmad/gene_ranker"
"Bug Tracker" = "https://github.com/MrHedmad/gene_ranker/issues"

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project.scripts]
generanker = "gene_ranker.bin:main"

